@@ -54,7 +54,7 @@ public class PickupCoilModule extends FaradayModule {
     private static final double PICKUP_COIL_LOOP_AREA = FaradayConstants.DEFAULT_PICKUP_LOOP_AREA;
     private static final double PICKUP_COIL_DIRECTION = 0.0; // radians
     private static final double PICKUP_COIL_DISTANCE_EXPONENT = 3.0;
-    private static final int PICKUP_COIL_SAMPLES_PER_MAGNET_HEIGHT = 5;
+    private static final int PICKUP_COIL_SAMPLES_PER_MAGNET_HEIGHT = 4;
     
     // Scaling
     private static final double LIGHTBULB_SCALE = 4.0;
