@@ -3,6 +3,7 @@ Changes for faraday
 ===============================================================================
 
 DONE:
+3/24/08 - undo conversion of magnet dimensions to integer precision
 3/24/08 - convert magnet dimensions to integer precision to satisfy constraints of new pickup coil model
 3/24/08 - set spacing of pickup coil sample points based on height of magnet
 3/21/08 - promote graphic that displays coil sample points to top-level
